[package]
name = "rs-stellar-base"
version = "0.1.0"
edition = "2021"
description = "A low level Rust library that offers a comprehensive set of functions for reading, writing, hashing, and signing primitive XDR constructs utilized in the Stellar network"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rahul-soshte/rs-stellar-base"
keywords = ["stellar", "soroban", "rust"]
authors = ["Rahul Soshte <rahul.soshte47@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
lazy_static = "1.4.0"
nacl = "0.5.3"
num-bigint = "0.4.3"
sha2 = "0.10.7"
stellar-strkey = "0.0.7"
stellar-xdr =  { version = "0.0.16", default-features = true, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsodium-sys = "0.2.7"
