[package]
name = "stellar-baselib"
version = "0.2.3"
edition = "2021"
description = "A low level Rust library that offers a comprehensive set of functions for reading, writing, hashing, and signing primitive XDR constructs utilized in the Stellar network"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rahul-soshte/rs-stellar-base"
keywords = ["stellar", "soroban", "rust"]
authors = ["Rahul Soshte <rahul.soshte47@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
hex = "0.4.3"
lazy_static = "1.4.0"
nacl = "0.5.3"
num-bigint = "0.4.3"
rand_core = {version = "0.6.4", default-features = true, features = ["getrandom"]}
getrandom = { version = "0.2.10", features = ["js"] }
sha2 = "0.10.7"
stellar-strkey = "0.0.7"
stellar-xdr =  { version = "0.0.17", default-features = true, features = ["base64", "std", "next", "serde", "alloc"] }
hex-literal = "0.4.1"
num-traits = "0.2.15"
hyper = "0.14.27"
libc = "0.2.147"
regex = "1.9.1"
num-rational = "0.4.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsodium-sys = "0.2.7"
