[package]
name = "stellar-baselib"
version = "0.5.2"
edition = "2021"
description = "A low level Rust library that offers a comprehensive set of functions for reading, writing, hashing, and signing primitive XDR constructs utilized in the Stellar network"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/rahul-soshte/rs-stellar-base"
keywords = ["stellar", "soroban", "rust"]
authors = ["Rahul Soshte <rahul.soshte47@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand_core = { version = "0.9.3", default-features = true, features = [
  "os_rng",
] }
hex = "0.4.3"
sha2 = "0.10.9"
stellar-strkey = "0.0.13"
stellar-xdr = { version = "23.0.0", default-features = true, features = [
  "base64",
  "std",
  "serde",
  "alloc",
] }
num-traits = "0.2.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2.175"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libsodium-sys-stable = "1.22.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
nacl = "0.5.3"

[dev-dependencies]
hex-literal = "1.0.0"

[features]
default = []
next = ["stellar-xdr/next"]
